--- a/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
@@ -9,7 +9,7 @@
         <div class="container p-3 rounded bg-light-gray mb-4">
             <div class="row">
                 <dl class="form-group col-12 col-md-6 mb-md-0">
-                    <dt class="mb-2"><label>セイ</label></dt>
+                    <dt class="mb-2">セイ</dt>
                     <dd>
                         <input class="form-control"
                             [class.validation]="inputForm.controls.familyName.invalid && inputForm.controls.familyName.touched"
@@ -140,7 +140,7 @@
                     <img src="/assets/images/common/credit_card.png" alt="">
                 </div>
             </div>
-            
+
 
             <p class="mb-2">クレジットカード決済の必要事項を入力ください。</p>
             <div *ngIf="creditCardType === 'input'" class="credit-input mb-2">
@@ -186,7 +186,8 @@
                                     </option>
 
                                 </select> 月
-                                <select class="form-control d-inline-block w-auto" formControlName="cardExpirationYear" id="cardExpirationYear">
+                                <select class="form-control d-inline-block w-auto" formControlName="cardExpirationYear"
+                                    id="cardExpirationYear">
 
                                     <option *ngFor="let year of cardExpiration.year" [value]="year">{{ year }}</option>
 
@@ -236,13 +237,16 @@
 
                 <div *ngIf="user.isMember()" class="text-center mb-3">
                     <input type="checkbox" formControlName="saveCreditCard" id="saveCreditCard">
-                    <label for="saveCreditCard">
-                        <strong>クレジットカード情報を保存する</strong>
+                    <label for="saveCreditCard" class="font-weight-bold">
+                        クレジットカード情報を保存する
                     </label>
                 </div>
 
-                <div *ngIf="user.isRegisteredCreditCards()" class="button gray-button">
-                    <button type="button" (click)="changeRegisteredCreditCard()">登録済みクレジットカードを使用する</button>
+                <div *ngIf="user.isRegisteredCreditCards()" class="buttons mx-auto mb-3">
+                    <button class="btn btn-block bg-dark-gray text-white py-3" type="button"
+                        (click)="changeRegisteredCreditCard()">
+                        登録済みクレジットカードを使用する
+                    </button>
                 </div>
             </div>
 
@@ -280,8 +284,10 @@
                 <input type="hidden" formControlName="cardExpirationYear">
                 <input type="hidden" formControlName="securityCode">
                 <input type="hidden" formControlName="holderName">
-                <div class="button gray-button" (click)="changeInputCreditCard()">
-                    <button type="button">クレジットカードを変更する</button>
+                <div class="buttons mx-auto mb-3" (click)="changeInputCreditCard()">
+                    <button class="btn btn-block bg-dark-gray text-white py-3" type="button">
+                        クレジットカードを変更する
+                    </button>
                 </div>
             </div>
             <div>
