--- a/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.scss
+++ b/src/client/app/modules/purchase/components/pages/purchase-mg-confirm/purchase-mg-confirm.component.scss
@@ -1,17 +1,5 @@
-$tablet: 1024px;
-$mobile: 767px;
-.mvtk-lists {
-    li {
-        dt {
-            @media screen and (max-width: 767px){
-                display: block;
-            }
-        }
-        dd {
-            @media screen and (max-width: 767px){
-                display: block;
-                width: 100%;
-            }
-        }
-    }
+.border-bottom:last-child {
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
+    border: none !important;
 }
