--- a/src/client/app/modules/purchase/components/pages/purchase-point/purchase-point.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-point/purchase-point.component.html
@@ -1,24 +1,23 @@
 <div class="contents bg-white p-3 pb-5 pt-md-4 px-md-5">
     <h1 class="text-center text-large font-weight-bold mb-3">ポイント使用</h1>
-    <p class="text-left text-md-center">
+    <p class="text-left text-md-center mb-3">
         貯まったポイントの使用方法を選択してください。
     </p>
     <div class="mb-3 point text-center">
-        <div class="inner bg-gray">現在
-            <strong class="text-large">{{ availableBalance }}</strong> ポイント</div>
+        <p class="bg-dark-gray text-white d-inline-block py-2 px-3">
+            現在<span class="text-large font-weight-bold">{{ availableBalance }}</span>ポイント
+        </p>
     </div>
 
-    <ul *ngIf="!isLoading" class="p-3 rounded bg-light-gray mb-3 tickets">
-        <li *ngFor="let pointTicket of pointTickets">
-            <dl>
-                <dt>
-                    <div class="text-small mb-1">{{ pointTicket.usePoint }}ポイントで引き換え</div>
-                    <div>
-                        <strong>{{ pointTicket.ticketName }}</strong>
-                    </div>
+    <ul *ngIf="!isLoading" class="p-3 rounded bg-light-gray mb-4 tickets">
+        <li class="container px-0 border-bottom border-dot border-gray pb-3 mb-3" *ngFor="let pointTicket of pointTickets">
+            <dl class="row align-items-center">
+                <dt class="col-12 col-md-4 mb-2 mb-md-0">
+                    <p class="text-small mb-1 font-weight-normal">{{ pointTicket.usePoint }}ポイントで引き換え</p>
+                    <p class="font-weight-bold">{{ pointTicket.ticketName }}</p>
                 </dt>
-                <dd>
-                    <select [(ngModel)]="selectTickets[pointTicket.ticketCode]">
+                <dd class="col-12 col-md-8 text-right">
+                    <select class="form-control d-block d-md-inline-block" [(ngModel)]="selectTickets[pointTicket.ticketCode]">
                         <option *ngFor="let value of ticketValueList" value="{{ value }}">{{ value }}枚</option>
                     </select>
                 </dd>
