--- a/src/client/app/modules/purchase/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.scss
+++ b/src/client/app/modules/purchase/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.scss
@@ -1,10 +1,9 @@
-$tablet: 1024px;
-$mobile: 767px;
+
 :host {
     width: 25%;
     padding: 0 0 0 10px;
     margin: 0 0 20px;
-    @media screen and (max-width: $tablet){
+    @media screen and (max-width: 1024px){
         width: 33.3%;
     }
     @media screen and (max-width: 767px){
