--- a/src/client/app/modules/shared/components/parts/header/header.component.html
+++ b/src/client/app/modules/shared/components/parts/header/header.component.html
@@ -1,11 +1,12 @@
-<header class="ticket-app-header ticket-app-show">
-    <div class="close">
-        <a href="{{ environment.APP_SITE_URL }}/#/purchase">
+<header class="ticket-app-header ticket-app-show bg-black">
+    <div class="d-flex align-items-center justify-content-end h-100 px-3">
+        <a class="d-inline-block text-white" href="{{ environment.APP_SITE_URL }}/#/purchase">
             閉じる
         </a>
     </div>
 </header>
-<header class="header bg-white border-bottom border-light-gray rounded-top px-3 py-2 px-md-5 py-md-4 clearfix ticket-app-hide">
+<header
+    class="header bg-white border-bottom border-light-gray rounded-top px-3 py-2 px-md-5 py-md-4 clearfix ticket-app-hide">
     <div class="position-relative">
         <div class="logo">
             <a href="{{ environment.PORTAL_SITE_URL }}">
