--- a/src/client/app/modules/shared/components/parts/header/header.component.scss
+++ b/src/client/app/modules/shared/components/parts/header/header.component.scss
@@ -1,5 +1,3 @@
-$tablet: 1024px;
-$mobile: 767px;
 .header {
     .logo {
         width: 70px;
@@ -10,4 +8,13 @@ $mobile: 767px;
             width: 100%;
         }
     }
+}
+
+.ticket-app-header {
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 50px;
 }
