--- a/src/client/app/modules/inquiry/pages/inquiry-login/inquiry-login.component.html
+++ b/src/client/app/modules/inquiry/pages/inquiry-login/inquiry-login.component.html
@@ -44,8 +44,8 @@
             </dl>
         </div>
 
-        <div class="buttons mx-auto mb-5">
-            <div class="mb-3">
+        <div class="buttons mx-auto">
+            <div class="mb-4">
                 <button class="btn btn-block btn-primary py-3 font-weight-bold" type="submit" [disabled]="isLoading">
                     <app-icon iconName="next-white" width="15" height="15"></app-icon>照会
                 </button>
