--- a/src/client/app/modules/shared/components/parts/header/header.component.html
+++ b/src/client/app/modules/shared/components/parts/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="ticket-app-header ticket-app-show bg-black">
-    <div class="d-flex align-items-center justify-content-end h-100 px-3">
+    <div class="d-flex align-items-center h-100 px-3 text-small">
         <a class="d-inline-block text-white" href="{{ environment.APP_SITE_URL }}/#/purchase">
             閉じる
         </a>
