--- a/src/client/app/modules/shared/components/parts/site-seal/site-seal.component.html
+++ b/src/client/app/modules/shared/components/parts/site-seal/site-seal.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-between">
+<div class="site-seal d-flex align-items-center justify-content-between mt-5">
     <div>
         <p class="text-small">
             この画面は、高いセキュリティでプライバシーを保護する為に、SSL暗号化通信を採用しています。
