--- a/src/client/app/modules/purchase/components/pages/purchase-overlap/purchase-overlap.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-overlap/purchase-overlap.component.html
@@ -33,7 +33,7 @@
         <p class="text-center mb-2">上記の仮予約内容で購入手続きへ戻ります。</p>
         <form (ngSubmit)="returnTransaction()">
             <div class="buttons mx-auto">
-                <div class="mb-3">
+                <div class="mb-4">
                     <button class="btn btn-block btn-primary py-3 font-weight-bold" [disabled]="isLoading" type="submit">
                         <app-icon iconName="next-white" width="15" height="15"></app-icon>仮予約の購入手続きへ戻る
                     </button>
@@ -42,7 +42,7 @@
         </form>
     </div>
 
-    <div class="form-layout mb-5">
+    <div class="form-layout">
         <h2 class="mb-2 font-weight-bold">新しく選択した上映スケジュール</h2>
         <ul class="p-3 rounded bg-light-gray mb-4">
             <li class="container px-0 border-bottom border-dot border-gray pb-3 mb-3">
@@ -69,7 +69,7 @@
         <p class="text-center mb-2">仮予約を削除し、新しく選択した上映スケジュールの購入手続きを進めます。</p>
         <form (ngSubmit)="newTransaction()">
             <div class="buttons mx-auto">
-                <div class="mb-3">
+                <div class="mb-4">
                     <button class="btn btn-block btn-primary py-3 font-weight-bold" [disabled]="isLoading" type="submit">
                         <app-icon iconName="next-white" width="15" height="15"></app-icon>仮予約を削除して次へ進む
                     </button>
