--- a/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.html
@@ -109,8 +109,8 @@
                 class="text-danger">利用規約に同意してください</div>
         </div>
 
-        <div class="buttons mx-auto mb-5">
-            <div class="mb-3">
+        <div class="buttons mx-auto">
+            <div class="mb-4">
                 <button class="btn btn-block btn-primary py-3 font-weight-bold" [disabled]="isLoading" type="submit">
                     <app-icon iconName="next-white" width="15" height="15"></app-icon>次へ
                 </button>
