--- a/src/client/app/modules/shared/components/parts/buttons/buttons.component.html
+++ b/src/client/app/modules/shared/components/parts/buttons/buttons.component.html
@@ -1,5 +1,5 @@
-<div class="buttons mx-auto mb-5">
-    <div class="mb-3">
+<div class="buttons mx-auto">
+    <div class="mb-4">
         <button class="btn btn-block btn-primary py-3 font-weight-bold" [disabled]="disabled" type="submit">
             <app-icon iconName="next-white" width="15" height="15"></app-icon>{{ nextLabel }}
         </button>
