--- a/src/client/app/modules/inquiry/pages/inquiry-confirm/inquiry-confirm.component.html
+++ b/src/client/app/modules/inquiry/pages/inquiry-confirm/inquiry-confirm.component.html
@@ -105,7 +105,7 @@
     </div>
 
 
-    <div class="buttons mx-auto mb-5 clearfix">
+    <div class="buttons mx-auto clearfix">
         <div class="prev-link">
             <a [routerLink]="'/inquiry/' + seller.location?.branchCode + '/login'">
                 <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る
