--- a/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-input/purchase-input.component.html
@@ -255,7 +255,7 @@
                     <li class="container px-0">
                         <dl class="row align-items-center border-bottom border-dot border-gray pb-3 mb-3">
                             <dt class="col-12 col-md-4 font-weight-bold mb-2 mb-md-0">ご利用金額</dt>
-                            <dd class="col-12 col-md-8" class="">
+                            <dd class="col-12 col-md-8">
                                 <p class="text-large text-danger font-weight-bold">￥{{ purchase.getTotalPrice() }}</p>
                             </dd>
                         </dl>
