--- a/src/client/app/modules/error/pages/expired/expired.component.html
+++ b/src/client/app/modules/error/pages/expired/expired.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center text-large font-weight-bold mb-3">タイムアウト</h1>
     <p class="text-left text-md-center mb-3">お手続きの有効期限がきれました。
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
-    <div class="buttons mx-auto mb-5">
+    <div class="buttons mx-auto">
         <div class="prev-link">
             <a class="ticket-app-hide" href="{{ environment.PORTAL_SITE_URL }}">
                 <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
