--- a/src/client/app/modules/error/pages/not-found/not-found.component.html
+++ b/src/client/app/modules/error/pages/not-found/not-found.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center text-large font-weight-bold mb-3">エラーが発生しました</h1>
     <p class="text-left text-md-center mb-3">お手続きの途中でエラーが発生いたしました。
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
-    <div class="buttons mx-auto mb-5">
+    <div class="buttons mx-auto">
         <div class="prev-link">
             <a href="{{ environment.PORTAL_SITE_URL }}">
                 <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
