### Fixed  - 座席説明レイアウト崩れ修正

--- a/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.html
+++ b/src/client/app/modules/purchase/components/pages/purchase-seat/purchase-seat.component.html
@@ -19,7 +19,7 @@
 
     <div class="seat-types mb-3 continer px-0">
         <ul class="row align-items-center flex-wrap">
-            <li *ngIf="getSeatType('grandClass')" class="seat-grand-class col-12 col-md-6 mb-3">
+            <li *ngIf="getSeatType('grandClass')" class="seat-grand-class col-12 col-md-6 m-0 mb-3">
                 <div class="d-flex align-items-center border border-gray px-3 py-2">
                     <div class="image text-center"><img src="/images/theater/seat/grand-class.svg"></div>
                     <div class="px-2">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </li>
-            <li *ngIf="getSeatType('premiumClass')" class="seat-premium-class col-12 col-md-6 mb-3">
+            <li *ngIf="getSeatType('premiumClass')" class="seat-premium-class col-12 col-md-6 m-0 mb-3">
                 <div class="d-flex align-items-center border border-gray px-3 py-2">
                     <div class="image text-center"><img src="/images/theater/seat/premium-class.svg"></div>
                     <div class="px-2">
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </li>
-            <li *ngIf="getSeatType('comfort')" class="seat-comfort col-12 col-md-6 mb-3">
+            <li *ngIf="getSeatType('comfort')" class="seat-comfort col-12 col-md-6 m-0 mb-3">
                 <div class="d-flex align-items-center border border-gray px-3 py-2">
                     <div class="image text-center"><img src="/images/theater/seat/comfort.svg"></div>
                     <div class="px-2">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </li>
-            <li *ngIf="getSeatType('ottoman')" class="seat-ottoman col-12 col-md-6 mb-3">
+            <li *ngIf="getSeatType('ottoman')" class="seat-ottoman col-12 col-md-6 m-0 mb-3">
                 <div class="d-flex align-items-center border border-gray px-3 py-2">
                     <div class="image text-center"><img src="/images/theater/seat/ottoman.svg"></div>
                     <div class="px-2">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </li>
-            <li *ngIf="getSeatType('parentAndChildPairLeft') || getSeatType('parentAndChildPairRight')" class="seat-parent-and-child-pair col-12 col-md-6 mb-3">
+            <li *ngIf="getSeatType('parentAndChildPairLeft') || getSeatType('parentAndChildPairRight')" class="seat-parent-and-child-pair col-12 col-md-6 m-0 mb-3">
                 <div class="d-flex align-items-center border border-gray px-3 py-2">
                     <div class="image text-center"><img src="/images/theater/seat/parent-and-child-pair.svg"></div>
                     <div class="px-2">
